# seqan

./: CMakeLists.txt
.github/workflows/: ci_intel.yml
apps/mason2/: simulate_illumina.cpp
apps/yara/: CMakeLists.txt  find_extender.h  misc_options.h
include/seqan/: binning_directory.h
include/seqan/align/: gap_anchor.h
include/seqan/basic/: builtin_functions.h  debug_test_system.h
include/seqan/binning_directory/: binning_directory_base.h  binning_directory_direct_addressing.h  binning_directory_hash.h  binning_directory_interleaved_bloom_filter.h  bitvector_base.h  bitvector_compressed.h  bitvector_compresseddisk.h  bitvector_disk.h  bitvector_uncompressed.h  bitvector_uncompresseddisk.h  filtervector.h
include/seqan/binning_directory/mock/: binning_directory_base.h  binning_directory_hash_base.h  binning_directory_hash_normal.h
include/seqan/file/: string_external.h
include/seqan/graph_algorithms/: graph_algorithm_heap_tree.h  kruskal.h
include/seqan/index/: shape_predefined.h
include/seqan/kmer/: filtervector.h  kmer_base.h  kmer_direct.h  kmer_ibf.h
include/seqan/kmer/test/: data.sh
include/seqan/kmer/test/performance/: CMakeLists.txt  g_benchmark.cpp  verify_benchmark.cpp
include/seqan/kmer/test/unit/: CMakeLists.txt  sim_benchmark.cpp  unit_benchmark.cpp
include/seqan/misc/: base.h
include/seqan/modifier/: modifier_functors.h  modifier_position.h
include/seqan/seq_io/: fasta_fastq.h
include/seqan/sequence/: segment_prefix.h
include/seqan/store/: store_align.h  store_all.h
scripts/: install_windows.bat
tests/binning_directory/: CMakeLists.txt  test_binning_directory.cpp  test_binning_directory.h
tests/binning_directory/benchmark/: CMakeLists.txt  count.cpp  g_benchmark.cpp  g_benchmark.h  helper.h  sim.cpp
tests/binning_directory/test/: CMakeLists.txt
tests/binning_directory/test/performance/: g_benchmark.cpp
tests/binning_directory/test/unit/: unit_benchmark.cpp
util/travis/: linux-cibuild.cmake  linux-cibuild.sh
